# ripl

./: .aider.conf.yml  .gitignore  .rules  AGENTS.md  CLAUDE.md  CNAME  Cargo.toml  LICENSE  README.md
.antigravity/: 01-project.md
.continue/rules/: 01-project.md
.ctx/: .gitignore  config.json
.cursor/rules/: 01-project.mdc
.github/: copilot-instructions.md
.windsurf/rules/: 01-project.md
docs/specs/: 2026-03-13-ripl-abstraction.md
src/: app.rs  aura.rs  config.rs  lib.rs  main.rs  scaffold.rs  session.rs  theme.rs  ui.rs
src/providers/: anthropic.rs  mod.rs  openai.rs  openrouter.rs  ouracle.rs
src/speech/: fish.rs  mod.rs  stt.rs  tts.rs
