[package]
name = "ripl"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6"
crossterm = "0.28"
rand = "0.8"
ratatui = "0.26"
textwrap = "0.16"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
serde_json = "1"
sha2 = "0.10"
