[package]
name = "ripl-tui"
version = "0.3.0"
edition = "2024"
rust-version = "1.94"
description = "ripl — a living, breathing TUI for agents in the macOS shell."
license = "MIT"
repository = "https://github.com/krry/ripl"
homepage = "https://ripl.kerry.ink"
readme = "README.md"
keywords = ["tui", "ai", "chat", "terminal", "ratatui"]
categories = ["command-line-interface", "command-line-utilities"]

[lib]
name = "ripl"
path = "src/lib.rs"

[[bin]]
name = "ripl"
path = "src/main.rs"

[dependencies]
color-eyre = "0.6"
crossterm = "0.28"
rand = "0.8"
ratatui = "0.26"
textwrap = "0.16"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
serde_json = "1"
sha2 = "0.10"
libc = "0.2"
